<resources>
    <string name="app_name">AgendaKotlin</string>
    <string name="label_phone">Telefono:</string>
    <string name="label_name">Nombre:</string>
    <string name="label_new_contact">Nuevo Contacto</string>
    <string name="label_age">Edad:</string>
    <string name="label_gener">Genero:</string>
    <string name="label_save">Guardar</string>
    <string name="label_delete">Eliminar</string>
    <string name="label_search">Buscar contacto</string>
    <string name="title_activity_main2">MainActivity2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="label_user">Imagen de usuario</string>
</resources>
